// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sort renders alpha ascending properly 1`] = `
<div
  className="form-group"
>
  <div
    className="dropdown btn-group"
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-default"
      disabled={false}
      id="sortTypeMenu"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      type="button"
    >
      Name
       
      <span
        className="caret"
      />
    </button>
    <ul
      aria-labelledby="sortTypeMenu"
      className="dropdown-menu"
      role="menu"
    >
      <li
        className="selected"
        role="presentation"
        style={undefined}
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Name
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Address
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Birth Month
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Car
        </a>
      </li>
    </ul>
  </div>
  <button
    className="btn btn-link"
    disabled={false}
    type="button"
  >
    <span
      aria-hidden={true}
      className="fa fa-sort-alpha-asc sort-direction"
    />
  </button>
</div>
`;

exports[`Sort renders alpha descending properly 1`] = `
<div
  className="form-group"
>
  <div
    className="dropdown btn-group"
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-default"
      disabled={false}
      id="sortTypeMenu"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      type="button"
    >
      Name
       
      <span
        className="caret"
      />
    </button>
    <ul
      aria-labelledby="sortTypeMenu"
      className="dropdown-menu"
      role="menu"
    >
      <li
        className="selected"
        role="presentation"
        style={undefined}
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Name
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Address
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Birth Month
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Car
        </a>
      </li>
    </ul>
  </div>
  <button
    className="btn btn-link"
    disabled={false}
    type="button"
  >
    <span
      aria-hidden={true}
      className="fa fa-sort-alpha-desc sort-direction"
    />
  </button>
</div>
`;

exports[`Sort renders numeric ascending properly 1`] = `
<div
  className="form-group"
>
  <div
    className="dropdown btn-group"
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-default"
      disabled={false}
      id="sortTypeMenu"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      type="button"
    >
      Name
       
      <span
        className="caret"
      />
    </button>
    <ul
      aria-labelledby="sortTypeMenu"
      className="dropdown-menu"
      role="menu"
    >
      <li
        className="selected"
        role="presentation"
        style={undefined}
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Name
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Address
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Birth Month
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Car
        </a>
      </li>
    </ul>
  </div>
  <button
    className="btn btn-link"
    disabled={false}
    type="button"
  >
    <span
      aria-hidden={true}
      className="fa fa-sort-numeric-asc sort-direction"
    />
  </button>
</div>
`;

exports[`Sort renders numeric descending properly 1`] = `
<div
  className="form-group"
>
  <div
    className="dropdown btn-group"
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-default"
      disabled={false}
      id="sortTypeMenu"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      type="button"
    >
      Name
       
      <span
        className="caret"
      />
    </button>
    <ul
      aria-labelledby="sortTypeMenu"
      className="dropdown-menu"
      role="menu"
    >
      <li
        className="selected"
        role="presentation"
        style={undefined}
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Name
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Address
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Birth Month
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Car
        </a>
      </li>
    </ul>
  </div>
  <button
    className="btn btn-link"
    disabled={false}
    type="button"
  >
    <span
      aria-hidden={true}
      className="fa fa-sort-numeric-desc sort-direction"
    />
  </button>
</div>
`;
